        to compile sparc64.
      - debian/patches/glibc235-gcc4-s390-inline.dpatch: New file, fix s390
        compilation breakage by changing static inline to auto inline for
        dl-machine.h.

    * To make glibc-2.3.5 buildable with gcc-3.4:
      - debian/sysdeps/m68k.mk: New file, to use gcc-3.4 as CC and BUILD_CC
        due to gcc-4.0 ICE.  See #319312.

    * debian/sysdeps/depflags.pl: Drop Depends: libdb1-compat because it's
      until sarge stuff.  Suggested by Colin Watson <cjwatson@debian.org>.
      (Closes: #318885)

    * debian/debhelper.in/nscd.dirs: New file, add /var/run/nscd dir to
      invoke nscd correctly.  (Closes: #314892)

    * debian/local/manpages/locale.gen.5: Fix typo, charsets -> charmaps.
      (Closes: #318982)

    * Michael Banck <mbanck@debian.org>:
      - debian/patches/hurd-enable-ldconfig.dpatch: New file, to build ldconfig
        again on Hurd.  (Closes: #309489)
      - debian/sysdeps/gnu.mk: Hurd-i386 needs --without-tls option to build.
      - debian/patches/hurd-libpthread-indirect-loading.dpatch: New file, to
        make libpthread load indirectly on Hurd.  (Closes: #312488)
      - debian/patches/hurd-ioctl-pfinet.dpatch: New file, to support part of
        SIOCGIFHWADDR for pfinet on Hurd.  (Closes: #295117)

    * Jeff Bailey <jbailey@ubuntu.com>:
      - debian/patches/glibc235-hppa-sysdeps.dpatch: New file, to build hppa
        linuxthreads locking problem and sysdeps correctly again.
      - debian/patches/glibc235-hppa-lt.dpatch: New file, likewise.

    * Denis Barbier <barbier@debian.org>:
      - debian/debhelper.in/locales.config: Use LANG=C for locale-dependent
        commands.  (Closes: #314717)
      - debian/debhelper.in/locales.postinst: Likewise.
      - debian/debhelper.in/locales.postinst: Fix repeated locale entry
        duplication when at least a locale is defined twice in /etc/locale.gen.
        (Closes: #271526)

    * Stephen Gildea <gildea@stop.mail-abuse.org>: