@@ -83,6 +83,8 @@ libexecdir=$(prefix)/lib
 
 BUILD_CC = gcc-4.0
 
+RUN_TESTSUITE = yes
+
 # Set CC for cross-compiling
 ifneq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
 CC     = $(DEB_HOST_GNU_TYPE)-gcc
